Fix the overflow issue for slider indicator

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ nav {
     width: 25%;
     max-width: 150px;
     position: absolute;
-    z-index: 10;
+    z-index: 8;
     margin: 1rem 0;
     align-self: flex-end;
     justify-self: center;
